see if fix select problem that options does not appear on mobile

--- a/src/styles/components/_Form.scss
+++ b/src/styles/components/_Form.scss
@@ -21,9 +21,9 @@
     background-color: transparent;
     border-bottom: 1px solid black;
 
-    .form__option {
-      background-color: rgb(167, 167, 167);
-    }
+    // .form__option {
+    //   background-color: rgb(167, 167, 167);
+    // }
   }
   .form__paragraph-select {
     margin-left: 10px;
